[gd_scene load_steps=15 format=3 uid="uid://dtj7lumyckq8p"]

[ext_resource type="Script" path="res://main/player/Player.gd" id="1_2jx2b"]
[ext_resource type="PackedScene" uid="uid://bseb0kmwt450e" path="res://main/player/Projectile.tscn" id="2_me784"]
[ext_resource type="Texture2D" uid="uid://dywws3lpdaeap" path="res://main/player/Player.png" id="3_jvovo"]
[ext_resource type="Shader" path="res://main/player/invert.gdshader" id="4_00130"]
[ext_resource type="AudioStream" uid="uid://cwp7twx3dp68l" path="res://main/player/projectile.wav" id="5_idkml"]
[ext_resource type="PackedScene" uid="uid://df7fpehgo8ksa" path="res://main/player/PlayerTrail.tscn" id="6_4jg4f"]
[ext_resource type="Texture2D" uid="uid://c735bwq37hfvj" path="res://main/player/triangleparticle.png" id="6_ax3w5"]
[ext_resource type="AudioStream" uid="uid://sgvelru2bwln" path="res://main/player/player_hit.wav" id="7_0isda"]
[ext_resource type="AudioStream" uid="uid://cxj5qv8b7t2fs" path="res://main/player/player_death.wav" id="8_sodec"]
[ext_resource type="PackedScene" uid="uid://dincxq4kit31q" path="res://main/player/target/Target.tscn" id="10_bb3yk"]
[ext_resource type="PackedScene" uid="uid://bmwiexgw8or3m" path="res://main/ui/pausemenu/PauseMenu.tscn" id="11_suxh4"]
[ext_resource type="PackedScene" uid="uid://dopri5blh86xm" path="res://main/ui/HUD/HUD.tscn" id="12_3bse0"]
[ext_resource type="PackedScene" uid="uid://bu0gc6dcyd6p0" path="res://main/ui/gameover/GameOver.tscn" id="14_44xmn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rp8iu"]
shader = ExtResource("4_00130")

[node name="Player" type="CharacterBody2D"]
visibility_layer = 2
z_index = 1
collision_layer = 2
collision_mask = 43
motion_mode = 1
script = ExtResource("1_2jx2b")
speed = 1000
Projectile = ExtResource("2_me784")

[node name="Target" parent="." instance=ExtResource("10_bb3yk")]
z_index = 2

[node name="PlayerSprite" type="Sprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_rp8iu")
position = Vector2(13, 0)
rotation = 1.5708
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_jvovo")

[node name="PlayerTrail" parent="PlayerSprite" instance=ExtResource("6_4jg4f")]

[node name="PlayerHitbox" type="CollisionPolygon2D" parent="."]
z_index = 1
position = Vector2(1, 0)
rotation = 1.5708
polygon = PackedVector2Array(0, -52, -18, 38, 18, 38)

[node name="Tip" type="Marker2D" parent="."]
z_index = 1
position = Vector2(77, 0)

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_idkml")

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 2.0
one_shot = true
explosiveness = 1.0
texture = ExtResource("6_ax3w5")
emission_shape = 1
emission_sphere_radius = 19.46
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 150.0
initial_velocity_max = 150.0
angular_velocity_min = 20.0
angular_velocity_max = 20.0
scale_amount_min = 0.05
scale_amount_max = 0.05

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="FlickerTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="PlayerHitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_0isda")

[node name="PlayerDeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_sodec")

[node name="ShootCooldownTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HUD" parent="." instance=ExtResource("12_3bse0")]
layer = 0

[node name="GameOver" parent="." instance=ExtResource("14_44xmn")]

[node name="PauseMenu" parent="." instance=ExtResource("11_suxh4")]

[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="FlickerTimer" to="." method="_on_flicker_timer_timeout"]
